[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Characters/Heroes/Knight/Knight_M/knight_m_idle_anim/knight_m_idle_anim_f1.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Characters/Heroes/Knight/Knight_M/knight_m_idle_anim/knight_m_idle_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/Heroes/Knight/Knight_M/knight_m_idle_anim/knight_m_idle_anim_f3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Characters/Heroes/Knight/Knight_M/knight_m_idle_anim/knight_m_idle_anim_f4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Characters/Heroes/Knight/Knight_M/knight_m_run_anim/knight_m_run_anim_f4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Characters/Heroes/Knight/Knight_M/knight_m_run_anim/knight_m_run_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Characters/Heroes/Knight/Knight_M/knight_m_run_anim/knight_m_run_anim_f3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Characters/Heroes/Knight/Knight_M/knight_m_run_anim/knight_m_run_anim_f2.png" type="Texture" id=9]
[ext_resource path="res://Overlay/Hurtbox.tscn" type="PackedScene" id=10]
[ext_resource path="res://Effects/WhiteColor.shader" type="Shader" id=11]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 11 )
shader_param/active = false

[sub_resource type="Animation" id=2]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 6 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 0.0

[sub_resource type="CircleShape2D" id=5]
radius = 6.0

[sub_resource type="Animation" id=6]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Stop"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
FRICTION = 600

[node name="YSort" type="YSort" parent="."]

[node name="Sprite" type="Sprite" parent="YSort"]
material = SubResource( 1 )
position = Vector2( 0, -5 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 10 )]
visible = false
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 5 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 6 )
anims/Stop = SubResource( 7 )

[node name="ProjectilePivot" type="Position2D" parent="."]

[node name="ProjectileSpawn" type="Position2D" parent="ProjectilePivot"]
position = Vector2( 16, 0 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invinciblity_started" from="Hurtbox" to="." method="_on_Hurtbox_invinciblity_started"]

[editable path="Hurtbox"]
